# Streaming-Service

./: .env  README.md  package-lock.json
backend/: Cargo.toml  Service.md
backend/src/: main.rs
backend/src/db/: videos.rs
backend/src/models/: video.rs
backend/src/routes/: health.rs  mod.rs  stream.rs  videos.rs
backend/src/services/: transcode.rs
frontend/: README.md  package-lock.json  package.json  upload_page.svelte  watch_page.svelte
frontend/src/routes/: +page.svelte
frontend/src/routes/v/[slug]/: +page.svelte
src/db/: mod.rs
src/models/: video.rs
src/routes/: stream.rs  videos.rs
src/services/: mod.rs  transcode.rs
src/storage/: local.rs  mod.rs
